--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -8,8 +8,6 @@
     <string name="rcvd_and_sent">%1$s получено — %2$s отправлено</string>
     <string name="query">Запрос</string>
     <string name="host">Главная ЭВМ</string>
-    <string name="capture_not_running">Захват не проводится!</string>
-    <string name="capture_not_started">Захват не начат!</string>
     <string name="app_filter">Целевое приложение</string>
     <string name="ready">Готов</string>
     <string name="about">О</string>
@@ -39,10 +37,8 @@
     <string name="source_code">Исходный код</string>
     <string name="yes">ДА</string>
     <string name="no">НЕТ</string>
-    <string name="existing_vpn_confirm">Текущее активное VPN приложение будет отсоединено. Вы хотите продолжить?</string>
     <string name="vpn_setup_failed">Настройка VPN провалена</string>
     <string name="app_not_found">Приложение "%1$s" не найдено</string>
-    <string name="apps_loading_please_wait">Идёт загрузка приложений, пожалуйста, подождите</string>
     <string name="stats">Показатели</string>
     <string name="active_connections">Активные соединения</string>
     <string name="dropped_connections">Оборванные соединения</string>
@@ -58,8 +54,6 @@
     <string name="no_apps">Нет приложений</string>
     <string name="dns_server">DNS сервер</string>
     <string name="apps">Приложения</string>
-    <string name="navigation_drawer_open">Открыть отрисовщик</string>
-    <string name="navigation_drawer_close">Закрыть отрисовщик</string>
     <string name="pcap_file">PCAP файл</string>
     <string name="pcap_file_info">Создать PCAP файл в хранилище устройства</string>
     <string name="cannot_write_file">Невозможно записать файл</string>
@@ -70,17 +64,14 @@
     <string name="delete_error">Невозможно удалить файл</string>
     <string name="capture_running">Захват проводится</string>
     <string name="notification_msg">%1$s захвачено, %2$s соединения</string>
-    <string name="no_app_filter">Целевое приложение не выбрано</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Открыто</string>
     <string name="first_seen">Впервые обнаружено</string>
     <string name="last_seen">В последний раз обнаружено</string>
     <string name="conn_status_closed">Закрыто</string>
     <string name="copy_to_clipboard">Копировать в буфер обмена</string>
-    <string name="copied_to_clipboard">Скопировано в буфер обмена!</string>
     <string name="connections_csv_fields_v1">IPПрото,IPИст,ПортИст,IpНазн,ПортНазн,Uid,Прил,Прото,Статус,Инфо,БайтОтпр,БайтПол,ПктовОтпр,ПктовПол,ВпервУвид,ПослУвид</string>
     <string name="save_to_file">Сохранить в файл</string>
-    <string name="file_saved">Файл успешно сохранён</string>
     <string name="older_connections_notice">%1$d старых соединений не показано</string>
     <string name="about_text">PCAPdroid это свободный инструмент захвата и отслеживания сетевого трафика, который работает без привелегий суперпользователя.</string>
     <string name="get_app">Получить его:</string>
@@ -95,17 +86,14 @@
     <string name="lang_english">Английский</string>
     <string name="system_default">Системный по-умолчанию</string>
     <string name="no_activity_file_selection">Программа для взаимодействия с данным файлом не обнаружена</string>
-    <string name="file_saved_with_name">Файл %1$s успешно сохранён</string>
     <string name="theme_light">Светлая</string>
     <string name="theme_dark">Тёмная</string>
     <string name="app_theme">Тема</string>
     <string name="enable_socks5_proxy">Включить SOCKS5-прокси</string>
-    <string name="enable_socks5_proxy_summary">При включении все TCP-соединения будут проведены через SOCKS5-прокси.</string>
     <string name="proxy">Прокси</string>
     <string name="proxy_ip_address">IP-адрес прокси</string>
     <string name="proxy_port">Порт Прокси</string>
     <string name="root_capture">Захват в режиме Root</string>
-    <string name="root_capture_summary">Захват в Root-режиме позволит PCAPdroid работать в паре с другими VPN-приложениями.</string>
     <string name="donate">Пожертвовать</string>
     <string name="root_log">Root-журнал</string>
     <string name="request_plaintext">Запрос в чистом виде</string>
@@ -138,8 +126,7 @@
     <string name="trailer_how_to">Как отобразить данные из Trailer в Wireshark</string>
     <string name="remove_ads">Отключить рекламу</string>
     <string name="pending_transaction">Пожалуйста, завершите транзакцию для получения этой возможности</string>
-    <string name="purchased_feature_ok">Платная возможность теперь доступна!</string>
-    <string name="ctrl_consent">Внешнее приложение хочет начать захват трафика посредством PCAPdroid.\nЕсли вы не уверены (или это не вы), то отклоните запрос!</string>
+    <string name="ctrl_consent">Внешнее приложение хочет начать захват трафика посредством PCAPdroid.\nЕсли вы не уверены (или это не вы), то отклоните запрос</string>
     <string name="deny">Отклонить</string>
     <string name="allow">Разрешить</string>
     <string name="ctrl_consent_title">PCAPdroid Контрольный запрос</string>
@@ -163,8 +150,6 @@
     <string name="malware_whitelist_rules">Правила игнорирования вредоносов</string>
     <string name="feature_not_available">Эта возможность на текущий момент недоступна для вашего устройства</string>
     <string name="billing_connecting">Подключение к Google Play в процессе, пожалуйста попробуйте еще раз позже</string>
-    <string name="malware_whitelist_help">Этот пользовательский список используется для подавления некоторых срабатываний обнаружения вредоносных соединений. Соединения попадающие под любое из этих правил не будут отмечены как вредоносные. Создавать правила вы можете через долгое нажатие по обнаруженному вредоносному соединению.</string>
-    <string name="hidden_connections_help">В списке содержатся правила для скрытия соединений из списка. Это позволяет сфокусироваться только на необходимых соединениях.</string>
     <string name="malicious_connection_filter">Вредоносные</string>
     <string name="status_filter">Статус: %1$s</string>
     <string name="not_hidden_filter">Не скрыты</string>
@@ -186,7 +171,6 @@
     <string name="country_val">Страна: %1$s</string>
     <string name="send_report">Отправить отчет</string>
     <string name="start_at_boot">Захват после загрузки устройства</string>
-    <string name="start_at_boot_summary">Если включено, захват трафика будет начинаться автоматически когда устройство загрузится.</string>
     <string name="malware_status_ok">Вредоносного трафика не обнаружено</string>
     <string name="malware_status_detected">Вредоносный траффик обнаружен</string>
     <string name="whitelist">Белый список</string>
@@ -211,7 +195,6 @@
     <string name="malware_detection_learn_more">Узнайте больше про возможность обнаружения вредоносных соединений</string>
     <string name="private_dns_message_notice">Частный DNS препятствует наблюдению PCAPdroid за DNS трафиком. Вы можете выключить его в сетевый настройках ОС Android.</string>
     <string name="private_dns_hinders_detection">Частный DNS препятствует обнаружению</string>
-    <string name="decryption_no_filter_warn">При расшифровке TLS необходимо выбирать целевое приложение во избежание проблем с интернет соединением</string>
     <string name="firewall">Файрвол</string>
     <string name="paid_features">Платные возможности</string>
     <string name="show_only_blocked">Заблокировано файрволом</string>
