--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,19 +10,19 @@
     <string name="system_id" translatable="false">System ID</string>
     <string name="app_license" translatable="false">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT
         ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License</a> for
-        more details.</string>
+        See the <a href='https://www.gnu.org/licenses/gpl-3.0-standalone.html'>GNU General Public License or later</a> for
+        more details</string>
     <string name="opensource_licenses" translatable="false"><b>Open Source Licenses:</b><br/>\n\n
         - zdtun: <a href='https://github.com/emanuele-f/zdtun/blob/master/COPYING'>GPL-3.0</a>\n\n
         - nDPI: <a href='https://github.com/ntop/nDPI/blob/dev/COPYING'>LGPL-3.0</a>\n\n
-        - nanohttpd: <a href='https://github.com/NanoHttpd/nanohttpd/blob/master/LICENSE.md'>BSD-3-Clause</a>\n\n
+        - NanoHTTPD: <a href='https://github.com/NanoHttpd/nanohttpd/blob/master/LICENSE.md'>BSD-3-Clause</a>\n\n
         - CustomActivityOnCrash: <a href='https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE'>Apache-2.0</a>\n\n
-        - gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
+        - Gson: <a href='https://github.com/google/gson/blob/master/LICENSE'>Apache-2.0</a>\n\n
         - MaxMind DB Reader: <a href='https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE'>Apache-2.0</a>\n\n
-        - Android-Flag-Kit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
+        - FlagKit: <a href='https://github.com/madebybowtie/FlagKit/blob/master/LICENSE'>MIT</a>\n\n
         - IP Geolocation by <a href='https://db-ip.com'>DB-IP</a>\n\n
-        - Font Awesome: <a href='https://fontawesome.com/license/free'>License</a>\n\n
-        - App icon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
+        - Font Awesome: <a href='https://fontawesome.com/license/free'>Licenses</a>\n\n
+        - App icon by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>\n\n
         </string>
 
     <!-- Localized -->
@@ -34,8 +34,6 @@
     <string name="rcvd_and_sent">%1$s received — %2$s sent</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
-    <string name="capture_not_running">Capture not running!</string>
-    <string name="capture_not_started">Capture not started!</string>
     <string name="app_filter">Target app</string>
     <string name="ready">Ready</string>
     <string name="about">About</string>
@@ -65,10 +63,8 @@
     <string name="source_code">Source code</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="existing_vpn_confirm">The currently active VPN app will be disconnected. Do you want to proceed?</string>
-    <string name="vpn_setup_failed">VPN setup failed</string>
-    <string name="app_not_found">App "%1$s" not found</string>
-    <string name="apps_loading_please_wait">Apps loading in progress, please wait</string>
+    <string name="vpn_setup_failed">Could not set up the VPN</string>
+    <string name="app_not_found">Could not find the "%1$s" app</string>
     <string name="stats">Stats</string>
     <string name="active_connections">Active connections</string>
     <string name="dropped_connections">Dropped connections</string>
@@ -84,54 +80,49 @@
     <string name="no_apps">No apps</string>
     <string name="dns_server">DNS server</string>
     <string name="apps">Apps</string>
-    <string name="navigation_drawer_open">Drawer open</string>
-    <string name="navigation_drawer_close">Drawer close</string>
     <string name="pcap_file">PCAP file</string>
-    <string name="pcap_file_info">Create a PCAP file into the device storage</string>
+    <string name="pcap_file_info">Create a PCAP file in device storage</string>
     <string name="cannot_write_file">Cannot write file</string>
     <string name="share">Share</string>
     <string name="delete">Delete</string>
     <string name="ok">OK</string>
-    <string name="pcap_file_action">Traffic saved to file %1$s (%2$s).</string>
-    <string name="delete_error">Could not delete file</string>
+    <string name="pcap_file_action">Traffic saved to the \"%1$s\" file (%2$s)</string>
+    <string name="delete_error">Could not delete the file</string>
     <string name="capture_running">Capture running</string>
     <string name="notification_msg">%1$s captured, %2$s connections</string>
-    <string name="no_app_filter">Target app is not selected</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Open</string>
     <string name="first_seen">First seen</string>
     <string name="last_seen">Last seen</string>
     <string name="conn_status_closed">Closed</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
-    <string name="copied_to_clipboard">Copied to clipboard!</string>
-    <string name="connections_csv_fields_v1">IPProto,SrcIP,SrcPort,DstIp,DstPort,Uid,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
+    <string name="connections_csv_fields_v1">IPProto,SrcIP,SrcPort,DstIp,DstPort,UID,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
     <string name="save_to_file">Save to file</string>
-    <string name="file_saved">File successfully saved</string>
     <string name="older_connections_notice">%1$d older connections not shown</string>
-    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges.</string>
+    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges</string>
     <string name="get_app">Get it:</string>
-    <string name="tls_how_to">How to setup the TLS decryption</string>
+    <string name="tls_how_to">How to set up the TLS decryption</string>
     <string name="unknown_app">Unknown</string>
     <string name="enable_ipv6">Enable IPv6</string>
-    <string name="enable_ipv6_summary">Allow IPv6 internet connections. This should only be enabled on networks with an IPv6 gateway.</string>
+    <string name="enable_ipv6_summary">Allow IPv6 connections to the Internet. Only use this on networks with an IPv6 gateway</string>
     <string name="error">Error</string>
     <string name="conn_status_unreachable">Unreachable</string>
     <string name="other_prefs">Other</string>
     <string name="app_language">App language</string>
     <string name="lang_english">English</string>
-    <string name="system_default">System default</string>
+    <string name="system_default">System</string>
     <string name="no_activity_file_selection">No app found to handle file selection</string>
-    <string name="file_saved_with_name">File %1$s successfully saved</string>
+    <string name="file_saved_with_name">File saved as \"%1$s\"</string>
     <string name="theme_light">Light</string>
     <string name="theme_dark">Dark</string>
     <string name="app_theme">Theme</string>
     <string name="enable_socks5_proxy">Enable SOCKS5 proxy</string>
-    <string name="enable_socks5_proxy_summary">When enabled, all the TCP connections will be redirected to the specified SOCKS5 proxy.</string>
+    <string name="enable_socks5_proxy_summary">Redirect all TCP connections to the specified SOCKS5 proxy</string>
     <string name="proxy">Proxy</string>
     <string name="proxy_ip_address">Proxy IP address</string>
     <string name="proxy_port">Proxy port</string>
     <string name="root_capture">Capture as root</string>
-    <string name="root_capture_summary">Capturing packets as root allows PCAPdroid to run with other VPN apps.</string>
+    <string name="root_capture_summary">Allows PCAPdroid to run with other VPN apps</string>
     <string name="donate">Donate</string>
     <string name="root_log">Root log</string>
     <string name="request_plaintext">Request plaintext</string>
@@ -153,19 +144,18 @@
     <string name="installed_on">Installed on</string>
     <string name="last_update">Last update</string>
     <string name="permissions">Permissions</string>
-    <string name="root_app_info">System daemons running with maximum privileges.</string>
-    <string name="netd_app_info">The system daemon which performs the DNS resolutions.</string>
-    <string name="android_app_info">The Android system.</string>
-    <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined.</string>
+    <string name="root_app_info">System daemons running with maximum privileges</string>
+    <string name="netd_app_info">The system daemon performing the DNS resolutions</string>
+    <string name="android_app_info">The Android system</string>
+    <string name="unknown_app_info">\"Unknown\" marks connections whose app could not be determined</string>
     <string name="packets_dropped">Packets dropped</string>
     <string name="capture_prefs">Capture</string>
     <string name="pcapdroid_trailer">PCAPdroid trailer</string>
-    <string name="pcapdroid_trailer_summary">A trailer containing additional metadata, such as the app name, will be added to the dumped packets.</string>
+    <string name="pcapdroid_trailer_summary">A trailer containing additional metadata (such as the app name) will be added to the dumped packets</string>
     <string name="trailer_how_to">How to display the trailer data in Wireshark</string>
     <string name="remove_ads">Remove ads</string>
     <string name="pending_transaction">Please complete your transaction to redeem this feature</string>
-    <string name="purchased_feature_ok">The purchased feature is now available!</string>
-    <string name="ctrl_consent">An app wants to capture your device traffic.\nDeny it if you are not sure!</string>
+    <string name="ctrl_consent">An app wants to capture your device traffic.\nDeny it if you are not sure</string>
     <string name="deny">Deny</string>
     <string name="allow">Allow</string>
     <string name="ctrl_consent_title">PCAPdroid control request</string>
@@ -178,19 +168,19 @@
     <string name="edit_filter">Edit filter</string>
     <string name="edit_list">Edit list</string>
     <string name="hidden_connections_rules">Hidden connections rules</string>
-    <string name="list_is_empty">List is empty</string>
+    <string name="list_is_empty">The list is empty</string>
     <string name="malicious_connection_app">Malicious connection detected (%1$s)</string>
     <string name="show_only_malicious">Malicious connections</string>
     <string name="security">Security</string>
     <string name="malware_detection">Malware detection</string>
-    <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists.</string>
+    <string name="malware_detection_summary">Detect connections to known malicious hosts via third-party blacklists</string>
     <string name="reset">Reset</string>
     <string name="malware_whitelist">Malware whitelist</string>
     <string name="malware_whitelist_rules">Malware whitelist rules</string>
     <string name="feature_not_available">This feature is currently unavailable for your device</string>
     <string name="billing_connecting">The connection to Google Play is in progress, please retry in a while</string>
-    <string name="malware_whitelist_help">This user-defined whitelist is used to inhibit malware detection. Connections matching any of these rules will not be marked as malware. You can create rules by long pressing a malicious connection.</string>
-    <string name="hidden_connections_help">This list contains rules to hide connections from the connections list. Hiding connections allows you to focus on the relevant ones.</string>
+    <string name="malware_whitelist_help">User-defined whitelist to inhibit malware detection. Long-press malicious connections to create rules unmarking them as malware</string>
+    <string name="hidden_connections_help">List of rules to hide connection-list entries so you can focus on relevant ones</string>
     <string name="malicious_connection_filter">Malicious</string>
     <string name="status_filter">Status: %1$s</string>
     <string name="not_hidden_filter">Not hidden</string>
@@ -205,21 +195,21 @@
     <string name="once">Once</string>
     <string name="forever">Forever</string>
     <string name="control_permissions">Control permissions</string>
-    <string name="control_permissions_summary">Check which apps are allowed to control the PCAPdroid capture.</string>
+    <string name="control_permissions_summary">Check which apps are allowed to control the PCAPdroid capture</string>
     <string name="control_permissions_item">%1$s: %2$s</string>
     <string name="country">Country</string>
     <string name="asn">ASN</string>
     <string name="country_val">Country: %1$s</string>
     <string name="send_report">Send report</string>
     <string name="start_at_boot">Start at boot</string>
-    <string name="start_at_boot_summary">If enabled, the capture will start automatically when the device boots.</string>
+    <string name="start_at_boot_summary">Auto-starts capture after boot</string>
     <string name="malware_status_ok">No malicious traffic detected</string>
     <string name="malware_status_detected">Malicious connections detected</string>
     <string name="whitelist">Whitelist</string>
     <string name="blacklists">Blacklists</string>
     <string name="status_outdated">Outdated</string>
     <string name="status_not_loaded">Not loaded</string>
-    <string name="status_uptodate">Up to date</string>
+    <string name="status_uptodate">Up-to-date</string>
     <string name="blacklist_type">"Type: %1$s"</string>
     <string name="blacklist_type_ip">IP blacklist</string>
     <string name="blacklist_type_domain">Domain blacklist</string>
@@ -235,9 +225,9 @@
     <string name="update_now">Update now</string>
     <string name="status_updating">Updating…</string>
     <string name="malware_detection_learn_more">Learn more about the malware detection feature</string>
-    <string name="private_dns_message_notice">Private DNS prevents PCAPdroid from inspecting the DNS traffic. You can disable it from the Android network settings.</string>
+    <string name="private_dns_message_notice">Private DNS prevents PCAPdroid from inspecting the DNS traffic. You can turn it off from the Android network settings</string>
     <string name="private_dns_hinders_detection">Private DNS hinders detection</string>
-    <string name="decryption_no_filter_warn">When performing TLS decryption you should select a target app to avoid breaking Internet connectivity</string>
+    <string name="decryption_no_filter_warn">Select a target app when decrypting TLS to avoid losing your connection to the Internet</string>
     <string name="block">Block…</string>
     <string name="firewall">Firewall</string>
     <string name="firewall_rules">Firewall rules</string>
@@ -257,10 +247,20 @@
     <string name="loading">Loading…</string>
     <string name="purchased">Purchased</string>
     <string name="no_items_for_purchase">No items available for purchase</string>
-    <string name="billing_failure">Connection to Google Play failed, please retry in a while</string>
+    <string name="billing_failure">Could not connect to Google Play. Please retry in a while</string>
     <string name="learn_more">Learn more</string>
     <string name="buy_action">Buy</string>
-    <string name="remove_ads_description">Remove ads from this app.</string>
-    <string name="ads_notice">In-app ads cause PCAPdroid to generate traffic towards external servers. You can remove the ads by purchasing a paid feature.</string>
+    <string name="remove_ads_description">Remove ads from this app</string>
+    <string name="ads_notice">In-app ads cause PCAPdroid to generate traffic towards external servers. You can remove the ads by purchasing a paid feature</string>
     <string name="item_redeemed">Redeemed</string>
+    <string name="capture_not_running_status">The capture is not running</string>
+    <string name="start_capture_first">Start the capture first</string>
+    <string name="copied">Copied</string>
+    <string name="can_use_purchased_feature">You can now use the purchased feature</string>
+    <string name="disconnect_vpn_confirm">Disconnect the active VPN app and continue?</string>
+    <string name="loading_apps">Loading apps…</string>
+    <string name="open_nav_drawer">Open drawer</string>
+    <string name="close_nav_drawer">Close drawer</string>
+    <string name="capture_all_apps">Capture the traffic of all the apps</string>
+    <string name="save_ok">Saved</string>
 </resources>
