--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -7,8 +7,6 @@
     <string name="rcvd_and_sent">%1$s ricevuti — %2$s inviati</string>
     <string name="query">Query</string>
     <string name="host">Host</string>
-    <string name="capture_not_running">La cattura non è in esecuzione!</string>
-    <string name="capture_not_started">La cattura non è stata avviata!</string>
     <string name="app_filter">Filtro App</string>
     <string name="ready">Pronto</string>
     <string name="about">Informazioni</string>
@@ -36,12 +34,10 @@
     <string name="user_guide">Guida Utente</string>
     <string name="open_telegram_group">Gruppo Telegram</string>
     <string name="source_code">Codice Sorgente</string>
-    <string name="yes">SI</string>
-    <string name="no">NO</string>
-    <string name="existing_vpn_confirm">L\'app di VPN attualmente in esecuzione verrà disconnessa. Vuoi procedere?</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
     <string name="vpn_setup_failed">Setup della VPN fallito</string>
     <string name="app_not_found">L\'app "%1$s" non è stata trovata</string>
-    <string name="apps_loading_please_wait">Caricamento delle app in corso, attendere</string>
     <string name="stats">Statistiche</string>
     <string name="active_connections">Connessioni Attive</string>
     <string name="dropped_connections">Connessioni Droppate</string>
@@ -57,8 +53,6 @@
     <string name="no_apps">Nessuna app</string>
     <string name="dns_server">Server DNS</string>
     <string name="apps">App</string>
-    <string name="navigation_drawer_open">Apri Drawer</string>
-    <string name="navigation_drawer_close">Chiudi Drawer</string>
     <string name="pcap_file">File PCAP</string>
     <string name="pcap_file_info">Crea un file PCAP nella memoria del dispositivo</string>
     <string name="cannot_write_file">Impossibile scrivere il file</string>
@@ -69,17 +63,14 @@
     <string name="delete_error">Impossibile eliminare il file</string>
     <string name="capture_running">Cattura in esecuzione</string>
     <string name="notification_msg">%1$s catturati, %2$s connessioni</string>
-    <string name="no_app_filter">Nessun filtro app impostato</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Attiva</string>
     <string name="first_seen">Inizio</string>
     <string name="last_seen">Fine</string>
     <string name="conn_status_closed">Terminata</string>
     <string name="copy_to_clipboard">Copia negli appunti</string>
-    <string name="copied_to_clipboard">Copiato negli appunti!</string>
     <string name="connections_csv_fields_v1">IPProto,SrcIP,SrcPort,DstIp,DstPort,Uid,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
     <string name="save_to_file">Esporta in un file</string>
-    <string name="file_saved">File salvato correttamente</string>
     <string name="older_connections_notice">%1$d connessioni precedenti nascoste</string>
     <string name="about_text">PCAPdroid è un software libero per la cattura e il monitoraggio di rete che funziona senza privilegi di root.</string>
     <string name="get_app">Scaricala:</string>
@@ -94,17 +85,15 @@
     <string name="lang_english">Inglese</string>
     <string name="system_default">Predefinita del sistema</string>
     <string name="no_activity_file_selection">App di selezione file mancante</string>
-    <string name="file_saved_with_name">Il file %1$s è stato salvato correttamente</string>
     <string name="theme_light">Chiaro</string>
     <string name="theme_dark">Scuro</string>
     <string name="app_theme">Tema</string>
     <string name="enable_socks5_proxy">Abilita Proxy SOCKS5</string>
-    <string name="enable_socks5_proxy_summary">Se abilitato, tutte le connessioni TCP saranno redirette al proxy SOCKS5 configurato.</string>
     <string name="proxy">Proxy</string>
     <string name="proxy_ip_address">Indiritto IP del Proxy</string>
     <string name="proxy_port">Porta del Proxy</string>
     <string name="root_capture">Cattura come Root</string>
-    <string name="root_capture_summary">Catturare i pacchetti come root permette a PCAPdroid di funzionare assieme ad altre app VPN.</string>
+    <string name="root_capture_summary">Permette a PCAPdroid di funzionare assieme ad altre app VPN</string>
     <string name="donate">Donazioni</string>
     <string name="root_log">Log Root</string>
     <string name="request_plaintext">Richiesta in Chiaro</string>
@@ -137,8 +126,7 @@
     <string name="trailer_how_to">Come visualizare le info del trailer su Wireshark</string>
     <string name="remove_ads">Rimuovi Annunci</string>
     <string name="pending_transaction">Completa la transazione per ottenere l\'accesso a questa funzionalità</string>
-    <string name="purchased_feature_ok">La funzionalità acquistata è ora disponibile!</string>
-    <string name="ctrl_consent">Un\'altra app vuole catturare il traffico di questo dispositivo.\nNegare l\'accesso se non si è sicuri!</string>
+    <string name="ctrl_consent">Un\'altra app vuole catturare il traffico di questo dispositivo.\nNegare l\'accesso se non si è sicuri</string>
     <string name="deny">Nega</string>
     <string name="allow">Permetti</string>
     <string name="ctrl_consent_title">Richiesta di Controllo PCAPdroid</string>
@@ -162,8 +150,6 @@
     <string name="malware_whitelist_rules">Regole della Whitelist Malware</string>
     <string name="feature_not_available">Questa funzione non è attualmente disponibile per il tuo dispositivo</string>
     <string name="billing_connecting">La connessione a Google Play è in corso, riprovare tra poco</string>
-    <string name="malware_whitelist_help">Questa whitelist, definita dall\'utente, è usata per inibire il rilevanto di malware. Le connessioni che matchano queste regole non sono considerate malevole. Puoi creare nuove regole tenendo premuta una connessione malevola.</string>
-    <string name="hidden_connections_help">Questa lista contiene regole usate per nascondere connessioni dalla lista delle connessioni. Nascondere connessione permette di focalizzarsi su quelle rilevanti.</string>
     <string name="malicious_connection_filter">Malevola</string>
     <string name="status_filter">Stato: %1$s</string>
     <string name="not_hidden_filter">Non nascosta</string>
@@ -185,7 +171,6 @@
     <string name="country_val">Nazione: %1$s</string>
     <string name="send_report">Invia Report</string>
     <string name="start_at_boot">Cattura all\'avvio</string>
-    <string name="start_at_boot_summary">Se abilitato, avvia automaticamente la cattura all\'accensione del dispositivo.</string>
     <string name="malware_status_ok">Nessun traffico malevolo rilevato</string>
     <string name="malware_status_detected">Connessioni malevole rilevate</string>
     <string name="whitelist">Whitelist</string>
@@ -210,7 +195,6 @@
     <string name="malware_detection_learn_more">Scopri di più sulla funzione di rilevamento malware</string>
     <string name="private_dns_message_notice">IL DNS privato impedisce a PCAPdroid di ispezionare il traffico DNS. Puoi disattivarlo dalle impostazioni di rete di Android.</string>
     <string name="private_dns_hinders_detection">Il DNS privato ostacola il rilevamento</string>
-    <string name="decryption_no_filter_warn">Per decifrare il traffico TLS è necessario impostare un filtro app per evitare di perdere la connettività di rete</string>
     <string name="block">Blocca…</string>
     <string name="firewall">Firewall</string>
     <string name="firewall_rules">Regole del Firewall</string>
