--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -9,8 +9,6 @@
     <string name="rcvd_and_sent">%1$s recebidos — %2$s enviados</string>
     <string name="query">Consulta</string>
     <string name="host">Host</string>
-    <string name="capture_not_running">A captura não está funcionando!</string>
-    <string name="capture_not_started">A captura não foi iniciada!</string>
     <string name="app_filter">Filtrar app desejado</string>
     <string name="ready">Pronto</string>
     <string name="about">Sobre</string>
@@ -40,10 +38,8 @@
     <string name="source_code">Código fonte</string>
     <string name="yes">SIM</string>
     <string name="no">NÃO</string>
-    <string name="existing_vpn_confirm">O app da VPN atualmente ativo será desconectado. Você quer prosseguir?</string>
     <string name="vpn_setup_failed">Configuração da VPN falhou</string>
     <string name="app_not_found">O "%1$s" app não foi encontrado</string>
-    <string name="apps_loading_please_wait">Apps estão carregando, por favor aguarde</string>
     <string name="stats">Estatísticas</string>
     <string name="active_connections">Conexões ativas</string>
     <string name="dropped_connections">Conexões interrompidas</string>
@@ -59,8 +55,6 @@
     <string name="no_apps">Nenhum app</string>
     <string name="dns_server">Servidor de DNS</string>
     <string name="apps">Apps</string>
-    <string name="navigation_drawer_open">Abrir aba</string>
-    <string name="navigation_drawer_close">Fechar aba</string>
     <string name="pcap_file">Arquivo PCAP</string>
     <string name="pcap_file_info">Criar um arquivo PCAP no armazenamento do dispositivo</string>
     <string name="cannot_write_file">Não foi possível escrever em arquivo</string>
@@ -71,17 +65,14 @@
     <string name="delete_error">Não foi possível excluir o arquivo</string>
     <string name="capture_running">Captura em andamento</string>
     <string name="notification_msg">%1$s capturados, %2$s conexões</string>
-    <string name="no_app_filter">Nenhum filtro para app foi definido</string>
     <string name="proto_and_port">%1$s, %2$d</string>
     <string name="conn_status_open">Aberto</string>
     <string name="first_seen">Visto primeiro</string>
     <string name="last_seen">Visto último</string>
     <string name="conn_status_closed">Fechado</string>
     <string name="copy_to_clipboard">Copiar ao Clipboard</string>
-    <string name="copied_to_clipboard">Copiado ao Clipboard!</string>
     <string name="connections_csv_fields_v1">IPProto,SrcIP,SrcPort,DstIp,DstPort,Uid,App,Proto,Status,Info,BytesSent,BytesRcvd,PktsSent,PktsRcvd,FirstSeen,LastSeen</string>
     <string name="save_to_file">Salvar em arquivo</string>
-    <string name="file_saved">Arquivo salvo com sucesso</string>
     <string name="older_connections_notice">%1$d conexões mais antigas não mostradas</string>
     <string name="about_text">PCAPdroid é uma ferramenta de captura e monitoramento de rede de software livre que funciona sem acesso Root.</string>
     <string name="get_app">Obtenha-o:</string>
@@ -96,17 +87,14 @@
     <string name="lang_english">Inglês</string>
     <string name="system_default">Padrão do sistema</string>
     <string name="no_activity_file_selection">Não foi encontrado nenhum app de seleção de arquivos</string>
-    <string name="file_saved_with_name">Arquivo %1$s salvo com sucesso</string>
     <string name="theme_light">Claro</string>
     <string name="theme_dark">Escuro</string>
     <string name="app_theme">Tema</string>
     <string name="enable_socks5_proxy">Ativar Proxy de SOCKS5</string>
-    <string name="enable_socks5_proxy_summary">Quando ativado, todas as conexões de TCP serão redirecionadas ao proxy de SOCKS5 especificado.</string>
     <string name="proxy">Proxy</string>
     <string name="proxy_ip_address">Endereço IP de Proxy</string>
     <string name="proxy_port">Porta de Proxy</string>
     <string name="root_capture">Capturar via Root</string>
-    <string name="root_capture_summary">A captura de pacotes via Root permite que o PCAPdroid funcione simultaneamente com outros apps de VPN.</string>
     <string name="donate">Doar</string>
     <string name="root_log">Registro via Root</string>
     <string name="request_plaintext">Solicitação em texto puro</string>
@@ -138,8 +126,7 @@
     <string name="trailer_how_to">Como exibir os dados do Trailer em Wireshark</string>
     <string name="remove_ads">Remover anúncios</string>
     <string name="pending_transaction">Por favor, finalize sua transação para liberar esta funcionalidade</string>
-    <string name="purchased_feature_ok">A funcionalidade adquirida já está disponível!</string>
-    <string name="ctrl_consent">Um app quer capturar o tráfego em seu dispositivo.\nSe não tiver certeza, negá-lo!</string>
+    <string name="ctrl_consent">Um app quer capturar o tráfego em seu dispositivo.\nSe não tiver certeza, negá-lo</string>
     <string name="deny">Negar</string>
     <string name="allow">Permitir</string>
     <string name="ctrl_consent_title">Pedido de controle do PCAPdroid</string>
