--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -224,8 +224,8 @@
     <string name="capture_not_running_status">La cattura non è in esecuzione</string>
     <string name="start_capture_first">Prima avvia la cattura</string>
     <string name="copied">Copiato</string>
-    <string name="can_use_purchased_feature">La funzione acquistata è pronta all'uso</string>
-    <string name="disconnect_vpn_confirm">Disconnettere l'app attuale di VPN e continuare?</string>
+    <string name="can_use_purchased_feature">La funzione acquistata è pronta all\'uso</string>
+    <string name="disconnect_vpn_confirm">Disconnettere l\'app attuale di VPN e continuare?</string>
     <string name="loading_apps">Caricamento app…</string>
     <string name="open_nav_drawer">Apri menù</string>
     <string name="close_nav_drawer">Chiudi menù</string>
